--- a/src/style.css
+++ b/src/style.css
@@ -3,3 +3,10 @@
 @tailwind components;
 
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+      
+* {
+  font-family: 'Inter', sans-serif;
+}
+
